--- a/ConvexHullEXPOESCOM/Convex.html
+++ b/ConvexHullEXPOESCOM/Convex.html
@@ -11,14 +11,13 @@
 </head>
 
 <body>
-<div id="ch-body">
-    <h2>Convex Hull</h2>
+<div id="body">
+    <h2>ConvexHull EquipoArbol</h2>
     <div id="canvas"></div>
     <div>
-        <button id="clearbtn" type="button">Clear</button>
-        <button id="step" type="button">Step</button>
-        <button id="run" type="button">Run</button>
-        <button id="random" type="button">Random</button>
+        <button id="runbtn" type="button">Iniciar</button>
+        <button id="randombtn" type="button">Aleatorio</button>
+        <button id="clearbtn" type="button">Reiniciar</button>
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
