--- a/ConvexHullEXPOESCOM/Convex.html
+++ b/ConvexHullEXPOESCOM/Convex.html
@@ -6,14 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    
+
     <title>Convex ESCOM</title>
 </head>
 
 <body>
 <div id="body">
     <h2>ConvexHull EquipoArbol</h2>
+    <div id="grid">
+      <div id="leftPanel">
+      <p>
+        El Convex Hull Algorithm (Envolvente convexa) es un algoritmo voraz
+        que se encarga de encontrar el minimmo conjunto convexo que contenga
+        un conjunto dado de puntos.
+      </p>
+      <p>Este problema es fundamental de la geometria computacional.
+      </p>
+      <h2>Sus aplicaciones abarcan:</h2>
+      <ul>
+        <li>Geometria</li>
+        <li>Graficos de computadora</li>
+        <li>Planeo de rutas para robots</li>
+      </ul>
+    </div>
     <div id="canvas"></div>
+    <div id="rightPanel">
+      <p>
+        <h2>Puntos del ConvexHull</h2>
+        <ul id="PointsInCH">
+
+        </ul>
+      </p>
+    </div>
+    </div>
     <div>
         <button id="runbtn" type="button">Iniciar</button>
         <button id="randombtn" type="button">Aleatorio</button>
